# BigData-TravelPlanner

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: pytest-smoke-suite.yml
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: deps.py
backend/app/api/v1/endpoints/: activities.py  attractions.py  auth.py  driving.py  flights.py  hotels.py  locations.py  trips.py  users.py  weather.py
backend/app/core/: cache.py  config.py
backend/app/db/: database.py  models.py
backend/app/schemas/: activity.py  attraction.py  auth.py  flight.py  hotel.py  location.py  trip.py  weather.py
backend/app/services/: activity_service.py  amadeus_client.py  attraction_service.py  base_client.py  driving_service.py  flight_service.py  hotel_service.py  location_service.py  weather_service.py
backend/scripts/: run_test.sh
backend/tests/: conftest.py
backend/tests/endpoints/: test_activities.py  test_attractions.py  test_auth.py  test_chatbot.py  test_driving.py  test_flights_locations.py  test_hotels.py  test_trips.py  test_users.py  test_weather.py
frontend/: Dockerfile  README.md  docker-compose.yml  dockerignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/savedtrips/: page.tsx
frontend/components/: Chatbot.tsx  Navbar.tsx  ProfileModal.tsx
frontend/components/landing/: LandingPage.tsx
frontend/components/layout/: LocationAutoComplete.tsx  Sidebar.tsx
frontend/components/map/: TripMap.tsx
frontend/components/results/: AttractionCard.tsx  AttractionsCard.tsx  DriveCard.tsx  DrivingCard.tsx  FlightCard.tsx  ItineraryModal.tsx  StayCard.tsx  TourCard.jsx  ToursCard.jsx  TripResults.tsx  WeatherCard.tsx
frontend/components/search/: LocationAutoComplete.tsx  Sidebar.tsx
frontend/context/: AuthContext.tsx
frontend/services/: api.ts
terraform/: cloud_run.tf  database.tf  iam.tf  main.tf  networking.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars  variables.tf
tests/: api_endpoint_tests.py
tests/selenium_tests/: conftest.py  test_auth.py  test_saved_trips.py  test_search.py  test_variables.py
tests/selenium_tests/pageobjects/: auth_path.py  saved_trips.py  search.py
