[project]
name = "wanderplan-tests"                                                                                                                                                                                         
requires-python = ">=3.10"                                                                                                                                                                                          
   
[project.optional-dependencies]                                                                                                                                                                                     
test = [                                                                                                                                                                                                          
    "pytest",
    "httpx",
    "pytest-asyncio",
    # whatever your tests need to hit the API
]                                                                                                                                                                                                                   
   
[tool.pytest.ini_options]                                                                                                                                                                                           
testpaths = ["tests"] 