[project]
name = "wanderplan-tests"                                                                                                                                                                                         
requires-python = ">=3.10"                                                                                                                                                                                          
   
[project.optional-dependencies]                                                                                                                                                                                     
test = [                                                                                                                                                                                                          
    "pytest",
    "httpx",
    "pytest-asyncio",
    "requests"
]                                                                                                                                                                                                                   
   
[tool.pytest.ini_options]                                                                                                                                                                                           
testpaths = ["tests"] 
pythonpath = ["."]
asyncio_mode = "auto"

# Modern, readable list format
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

markers = [
    "smoke: Critical heart-rate and GPS parsing checks",
    "regression: Full multi-sport analysis suite",
]